# tcg-analytics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/api/: main.py
static/: README.md  index.html
tcg_analytics/api/: main.py
tcg_analytics/util/: ebay.py  justtcg.py
tests/unit/api/: test_main.py
tests/unit/util/: test_ebay.py  test_justtcg.py
util/: justtcg.py  justtcg_test.py
